Migrate page buttons look bad on mobile Fixes #338

--- a/src/migrate/css/migrate.css
+++ b/src/migrate/css/migrate.css
@@ -11,3 +11,9 @@
     background-color: rgba(var(--color-green-rgb), 0.4);
   }
 }
+
+.iron-vault-migration-view {
+  & button {
+    white-space: normal;
+  }
+}
